# keel-multi-agent-pipeline

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  plan.md
.github/workflows/: ci.yml
apps/api/: .gitignore  pyproject.toml
apps/api/data/uploads/voyage_001/: _cached_extracts.json  expected_reconciliation.json
apps/api/keel_api/: adapters.py  database.py  main.py  pipeline.py  pipeline_agents.py  schemas.py  store.py
apps/api/keel_api/engine/: __init__.py  state_machine.py
apps/api/keel_api/extraction/: __init__.py  extractor.py
apps/api/keel_api/letter/: render.py
apps/api/keel_api/parsing/: __init__.py  dispatcher.py  models.py  pdfplumber_parser.py  pymupdf_parser.py
apps/api/keel_api/reconcile/: adjudicator.py  differ.py
apps/api/keel_api/rules/: __init__.py  evaluators.py
apps/api/keel_api/weather/: __init__.py  fixture_provider.py
apps/api/tests/: check_engine.py  test_bimco_rules.py  test_canonical.py  test_delete.py  test_engine.py  test_extraction.py  test_fixtures.py  test_healthz.py  test_parsers.py  test_reconciliation_cases.py  test_weather.py
apps/web/: empty-module.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/app/: page.tsx  (+3 more)
docs/: demo_workflow.md  phase-1-plan.md  prd.md
docs/archive/: gem.md  hackathon-demo-gpt.md  one.md  qwen.md
scripts/: extract_charterparty.py  extract_sof_charterer.py  extract_sof_owner.py  generate_fixtures.py  seed_voyages.py
test-cases/: README.md  _generate_fixtures.py  _live_llm_proof.py
(+61 files in other folders)
